Mostly changes for mobile

--- a/khyeras/_dev/styles/khyeras_v1/template/custom/extra_breadcrumbs.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/extra_breadcrumbs.html
@@ -5,7 +5,7 @@
 	{% endif %}
 	<li class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->>
 		<i class="icon fa-chevron-right fa-fw"></i>
-		<a href="{ROOT_PATH}{{ crumb_url }}" itemprop="url">
+		<a href="{BOARD_URL}{{ crumb_url }}" itemprop="url">
 			<span itemprop="title">{{ crumb }}</span>
 		</a>
 	</li>
