--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
@@ -1,19 +1,19 @@
 <ul class="menu nav-menu" role="menu">
 	<li class="dropdown-container">
 		<div class="menu-label">
-			<a href="{ROOT_PATH}about" title="About" role="menuitem"><span>About</span></a>
+			<a href="{BOARD_URL}about" title="About" role="menuitem"><span>About</span></a>
 			<i class="icon icon-lg fa-chevron-down menu-trigger"></i>
 		</div>
 		<div class="dropdown">
 			<ul class="dropdown-contents" role="menu">
 				<li>
-					<a href="{ROOT_PATH}rules" title="Rules" role="menuitem"><span>Rules</span></a>
+					<a href="{BOARD_URL}rules" title="Rules" role="menuitem"><span>Rules</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}managing-your-account" title="Managing Your Account" role="menuitem"><span>Managing Your Account</span></a>
+					<a href="{BOARD_URL}managing-your-account" title="Managing Your Account" role="menuitem"><span>Managing Your Account</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}getting-started" title="Getting Started" role="menuitem"><span>Getting Started</span></a>
+					<a href="{BOARD_URL}getting-started" title="Getting Started" role="menuitem"><span>Getting Started</span></a>
 				</li>
 				<li>
 					<a href="{U_FAQ}" title="{L_FORUM} {L_FAQ}" role="menuitem"><span>{L_FORUM} {L_FAQ}</span></a>
@@ -35,56 +35,56 @@
 	</li>
 	<li class="dropdown-container">
 		<div class="menu-label">
-			<a href="{ROOT_PATH}lore" title="Lore" role="menuitem"><span>Lore</span></a>
+			<a href="{BOARD_URL}lore" title="Lore" role="menuitem"><span>Lore</span></a>
 			<i class="icon icon-lg fa-chevron-down menu-trigger"></i>
 		</div>
 		<div class="dropdown">
 			<ul class="dropdown-contents" role="menu">
 				<li>
-					<a href="{ROOT_PATH}history" title="History" role="menuitem"><span>History</span></a>
+					<a href="{BOARD_URL}history" title="History" role="menuitem"><span>History</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}timeline" title="Timeline" role="menuitem"><span>Timeline</span></a>
+					<a href="{BOARD_URL}timeline" title="Timeline" role="menuitem"><span>Timeline</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}glossary" title="Glossary" role="menuitem"><span>Glossary</span></a>
+					<a href="{BOARD_URL}glossary" title="Glossary" role="menuitem"><span>Glossary</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}races" title="Races" role="menuitem"><span>Races</span></a>
+					<a href="{BOARD_URL}races" title="Races" role="menuitem"><span>Races</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}races-half-breed" title="Half-Breed" role="menuitem"><span>Half-Breed</span></a>
+					<a href="{BOARD_URL}races-half-breed" title="Half-Breed" role="menuitem"><span>Half-Breed</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}religion" title="Religion" role="menuitem"><span>Religion</span></a>
+					<a href="{BOARD_URL}religion" title="Religion" role="menuitem"><span>Religion</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}classes" title="Classes" role="menuitem"><span>Classes</span></a>
+					<a href="{BOARD_URL}classes" title="Classes" role="menuitem"><span>Classes</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}magic" title="Magic" role="menuitem"><span>Magic</span></a>
+					<a href="{BOARD_URL}magic" title="Magic" role="menuitem"><span>Magic</span></a>
 				</li>
 			</ul>
 		</div>
 	</li>
 	<li class="dropdown-container">
 		<div class="menu-label">
-			<a href="{ROOT_PATH}setting" title="Setting" role="menuitem"><span>Setting</span></a>
+			<a href="{BOARD_URL}setting" title="Setting" role="menuitem"><span>Setting</span></a>
 			<i class="icon icon-lg fa-chevron-down menu-trigger"></i>
 		</div>
 		<div class="dropdown">
 			<ul class="dropdown-contents" role="menu">
 				<li>
-					<a href="{ROOT_PATH}setting-tviyr" title="Tviyr" role="menuitem"><span>Tviyr</span></a>
+					<a href="{BOARD_URL}setting-tviyr" title="Tviyr" role="menuitem"><span>Tviyr</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}setting-ninraih" title="Ninraih" role="menuitem"><span>Ninraih</span></a>
+					<a href="{BOARD_URL}setting-ninraih" title="Ninraih" role="menuitem"><span>Ninraih</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}setting-irtuen-reaches" title="Irtuen Reaches" role="menuitem"><span>Irtuen Reaches</span></a>
+					<a href="{BOARD_URL}setting-irtuen-reaches" title="Irtuen Reaches" role="menuitem"><span>Irtuen Reaches</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}setting-map" title="Map" role="menuitem"><span>Map</span></a>
+					<a href="{BOARD_URL}setting-map" title="Map" role="menuitem"><span>Map</span></a>
 				</li>
 			</ul>
 		</div>
