--- a/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
@@ -26,7 +26,7 @@
 							</p>
 						<!-- ELSEIF S_REGISTERED_USER -->
 							<p>
-								Don't forget to check out the latest <a href="{BOARD_URL}/viewforum.php?f=9">announcements</a> and <a href="{BOARD_URL}/viewforum.php?f=26">events</a>. Or, perhaps you're looking to add a new character? If so, don't forget to <a href="{BOARD_URL}/ucp.php?i=-flerex-linkedaccounts-ucp-main_module&mode=management">link the account</a>.
+								Don't forget to check out the latest <a href="{BOARD_URL}viewforum.php?f=9">announcements</a> and <a href="{BOARD_URL}viewforum.php?f=26">events</a>. Or, perhaps you're looking to add a new character? If so, don't forget to <a href="{BOARD_URL}ucp.php?i=-flerex-linkedaccounts-ucp-main_module&mode=management">link the account</a>.
 							</p>
 						<!-- ELSE -->
 							<p>
@@ -61,10 +61,10 @@
 					</div>
 					<div class="site-details flex-column">
 						<p class="introduction">
-							Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{ROOT_PATH}history">Read more...</a>
+							Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{BOARD_URL}history">Read more...</a>
 						</p>
 						<p>
-							The current year is <span class="year">448</span> and the season is fall. <a href="{ROOT_PATH}timeline" class="read-more">Check here for Khy'eras' timeline.</a>
+							The current year is <span class="year">448</span> and the season is fall. <a href="{BOARD_URL}timeline" class="read-more">Check here for Khy'eras' timeline.</a>
 						</p>
 					</div>
 				</div>
