--- a/khyeras/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/styles/khyeras_v1/template/memberlist_view.html
@@ -141,7 +141,7 @@
 			<!-- EVENT memberlist_view_non_contact_custom_fields_before -->
 			{% if S_PROFILE_C_WRITER_NAME %}
 				{% set writer_value %}
-					For more information, see <a href="{ROOT_PATH}{PROFILE_C_WRITER_NAME_CONTACT}">{PROFILE_C_WRITER_NAME_VALUE}</a>.
+					For more information, see <a href="{BOARD_URL}{PROFILE_C_WRITER_NAME_CONTACT}">{PROFILE_C_WRITER_NAME_VALUE}</a>.
 				{% endset %}
 			{% else %}
 				{% set writer_value = '' %}
