--- a/khyeras/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/styles/khyeras_v1/template/memberlist_view.html
@@ -71,6 +71,10 @@
 		</dl>
 		<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
 			<dl class="left-box details profile-details {{ character_class }}">
+				<dd>
+					<strong>testing things:</strong>&nbsp;&nbsp;&nbsp;
+					<!-- INCLUDE custom/level.html -->
+				</dd>
 				<dd class="character-card details-full">
 					<div class="level">
 						<div class="level-wrap">
