--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -48,8 +48,8 @@
 
 <!-- IF S_USER_LOGGED_IN and not S_IS_BOT -->
 	<script>
-		var accType = '{{ KHY_ACCOUNT_TYPE }}';
-		var groupName = '{{ KHY_GROUP_NAME | title }}';
+		var accType = '{{ KHY_USER_ACCOUNT_TYPE }}';
+		var groupName = '{{ KHY_USER_GROUP_NAME | title }}';
 	</script>
 <!-- ENDIF -->
 
