--- a/khyeras/ext/flerex/linkedaccounts/styles/khyeras_v1/template/event/navbar_header_profile_list_after.html
+++ b/khyeras/ext/flerex/linkedaccounts/styles/khyeras_v1/template/event/navbar_header_profile_list_after.html
@@ -1,22 +1,14 @@
 {% if switchable_account %}
-	{% INCLUDEJS '@flerex_linkedaccounts/switcher.js' %}
-		<li class="linked-account-title">
-			<strong>{{ lang('LINKED_ACCOUNTS') }}:</strong>
-		</li>
-		{% for account in switchable_account %}
-			<li class="linked-account">
-				{% if U_CAN_LINK_ACCOUNT %}
-					<a href="{{ account.SWITCH_LINK }}" role="menuitem" data-ajax="flerex.linked_accounts.switch" data-refresh="true">
-						<div class="image-wrap">
-							{% if account.AVATAR %}
-								{{ account.AVATAR }}
-							{% else %}
-								<img src="{{ T_THEME_PATH }}/images/no_avatar.gif" class="avatar" alt="">
-							{% endif %}
-						</div>
-						{{ account.NAME }}
-					</a>
-				{% else %}
+	{% if S_AJAX %}
+		{% INCLUDEJS '@flerex_linkedaccounts/ajax.js' %}
+	{% endif %}
+	<li class="linked-account-title">
+		<strong>{{ lang('LINKED_ACCOUNTS') }}:</strong>
+	</li>
+	{% for account in switchable_account %}
+		<li class="linked-account">
+			{% if U_CAN_LINK_ACCOUNT %}
+				<a href="{{ account.SWITCH_LINK }}" role="menuitem"{% if S_AJAX %} data-ajax="flerex.linked_accounts.switch" data-refresh="true"{% endif %}>
 					<div class="image-wrap">
 						{% if account.AVATAR %}
 							{{ account.AVATAR }}
@@ -25,7 +17,17 @@
 						{% endif %}
 					</div>
 					{{ account.NAME }}
-				{% endif %}
-			</li>
-		{% endfor %}
+				</a>
+			{% else %}
+				<div class="image-wrap">
+					{% if account.AVATAR %}
+						{{ account.AVATAR }}
+					{% else %}
+						<img src="{{ T_THEME_PATH }}/images/no_avatar.gif" class="avatar" alt="">
+					{% endif %}
+				</div>
+				{{ account.NAME }}
+			{% endif %}
+		</li>
+	{% endfor %}
 {% endif %}
