--- a/khyeras/styles/khyeras_v1/template/ucp_register.html
+++ b/khyeras/styles/khyeras_v1/template/ucp_register.html
@@ -1,6 +1,6 @@
 <!-- INCLUDE overall_header.html -->
 
-<script type="text/javascript">
+<script>
 // <![CDATA[
 	/**
 	* Change language
@@ -62,7 +62,7 @@
 
 		<!-- INCLUDE custom/profile_fields.html -->
 
-		<!-- EVENT ucp_register_profile_fields_after -->		
+		<!-- EVENT ucp_register_profile_fields_after -->
 	</div>
 </div>
 
