--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
@@ -10,11 +10,13 @@ $icon-chevron-right: \f054;
 $icon-chevron-up: \f077;
 $icon-clone: \f24d;
 $icon-cogs: \f085;
+$icon-comment: \f075;
 $icon-discord: \f392;
 $icon-envelope: \f0e0;
 $icon-exclamation: \f12a;
 $icon-exclamation-circle: \f06a;
 $icon-exclamation-triangle: \f071;
+$icon-eye: \f06e;
 $icon-facebook: \f09a;
 $icon-file-o: \f016;
 $icon-gplus: \f0d5;
@@ -33,6 +35,7 @@ $icon-spinner: \f110;
 $icon-star: \f005;
 $icon-strikethrough: \f0cc;
 $icon-thumb: \f164;
+$icon-user: \f007;
 $icon-windows: \f17a;
 $icon-world: \f0ac;
 $icon-x: \f00d;
