--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -18,13 +18,13 @@
 			vertical-align: top;
 			margin: 0 0 $ffs 0;
 		}
-		select {
-			width: auto;
-			@include small-form-ele;
-			font-size: rem(13px);
-			min-height: 0;
-		}
-		.bbcode-s, .bbcode-center {
+		// select {
+		// 	width: auto;
+		// 	@include small-form-ele($padding: 6px 30px 6px 10px);
+		// 	font-size: rem(13px);
+		// 	min-height: 0;
+		// }
+		.bbcode-s, .bbcode-center, .bbcode-hidden, .bbcode-mention, .bbcode-user {
 			font-size: 0;
 			&:before {
 				content: '';
@@ -37,6 +37,15 @@
 		}
 		.bbcode-center:before {
 			content: unicode($icon-align-center);
+		}
+		.bbcode-hidden:before {
+			content: unicode($icon-eye);
+		}
+		.bbcode-mention:before {
+			content: unicode($icon-comment);
+		}
+		.bbcode-user:before {
+			content: unicode($icon-user);
 		}
 	}
 	#smiley-box {
